--- a/src/index.html
+++ b/src/index.html
@@ -165,7 +165,7 @@
       <li class="card">
         <img
           class="card__image"
-          src="<%=require('./images/jacques-cousteau.jpg')%"
+          src="">
           alt="placeholder"
         />
         <img
