--- a/src/index.html
+++ b/src/index.html
@@ -165,7 +165,7 @@
       <li class="card">
         <img
           class="card__image"
-          src="">
+          src=""
           alt="placeholder"
         />
         <img
