--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
               id="edit-modal-open-button"
               type="button"
             >
-             <img
+              <img
                 class="profile__edit-button-picture"
                 src="<%=require('./images/edit-icon.svg')%>"
                 alt="Add Button"
@@ -44,16 +44,16 @@
             <p class="profile__title">Explorer</p>
           </div>
           <button
-          type="button"
-          class="profile__add-button"
-          id="add-modal-open-button"
+            type="button"
+            class="profile__add-button"
+            id="add-modal-open-button"
           >
-          <img
-            class="profile__add-button-picture"
-            src="<%=require('./images/add-icon.svg')%>"
-            alt=""
-          ></img>
-        </button>
+            <img
+              class="profile__add-button-picture"
+              src="<%=require('./images/add-icon.svg')%>"
+              alt=""
+        ></img>
+          </button>
         </section>
 
         <section class="cards page__section">
@@ -74,38 +74,36 @@
         ></button>
         <h2 class="popup__heading">Edit profile</h2>
 
-
         <form class="popup__form" name="edit_profile_form">
-            <input
-              class="popup__input popup__name"
-              type="text"
-              name="name"
-              id="username"
-              placeholder="Name"
-              maxlength="40"
-              minlength="2"
-              required
-            />
-            <div class="popup__text-underline" id="username-redline">
-              <span class="popup__error" id="username-error">test</span>
-            </div>
+          <input
+            class="popup__input popup__name"
+            type="text"
+            name="name"
+            id="username"
+            placeholder="Name"
+            maxlength="40"
+            minlength="2"
+            required
+          />
+          <div class="popup__text-underline" id="username-redline">
+            <span class="popup__error" id="username-error">test</span>
+          </div>
 
-            <input
-              class="popup__input popup__title"
-              type="text"
-              name="add-modal-open-button"
-              id="description"
-              placeholder="Description"
-              maxlength="200"
-              minlength="2"
-              required
-            />
+          <input
+            class="popup__input popup__title"
+            type="text"
+            name="add-modal-open-button"
+            id="description"
+            placeholder="Description"
+            maxlength="200"
+            minlength="2"
+            required
+          />
 
           <div class="popup__text-underline" id="description-redline">
-          <span class="popup__error" id="description-error">test</span>
-        </div>
-          <button class="popup__button" type="submit">Save
-          </button>
+            <span class="popup__error" id="description-error">test</span>
+          </div>
+          <button class="popup__button" type="submit">Save</button>
         </form>
       </div>
     </div>
@@ -120,34 +118,39 @@
         <h2 class="popup__heading">New Place</h2>
 
         <form class="popup__form" name="image_form">
-            <input
-              class="popup__input popup__name popup__image-name"
-              type="text"
-              name="name"
-              id="image-name"
-              placeholder="name"
-              maxlength="30"
-              minlength="1"
-              required
-            />
-            <div class="popup__text-underline" id="image-name-redline">
+          <input
+            class="popup__input popup__name popup__image-name"
+            type="text"
+            name="name"
+            id="image-name"
+            placeholder="name"
+            maxlength="30"
+            minlength="1"
+            required
+          />
+          <div class="popup__text-underline" id="image-name-redline">
             <span class="popup__error" id="image-name-error">test</span>
           </div>
 
-            <input
-              class="popup__input popup__title popup__input_image_link"
-              type="url"
-              name="link"
-              id="image-link"
-              placeholder="Image Link"
-              required
-            />
+          <input
+            class="popup__input popup__title popup__input_image_link"
+            type="url"
+            name="link"
+            id="image-link"
+            placeholder="Image Link"
+            required
+          />
 
-            <div class="popup__text-underline" id="image-link-redline">
+          <div class="popup__text-underline" id="image-link-redline">
             <span class="popup__error" id="image-link-error">test</span>
           </div>
 
-          <button disabled class="popup__button popup__button_disabled" type="submit">Create
+          <button
+            disabled
+            class="popup__button popup__button_disabled"
+            type="submit"
+          >
+            Create
           </button>
         </form>
       </div>
@@ -155,7 +158,11 @@
 
     <div class="popup" id="popup-image">
       <div class="popup__image-container">
-        <button class="popup__close" id="popup__close-image" type="button"></button>
+        <button
+          class="popup__close"
+          id="popup__close-image"
+          type="button"
+        ></button>
         <img class="popup__image-preview" src="#" alt="" />
         <p class="popup__image-caption"></p>
       </div>
@@ -163,15 +170,11 @@
 
     <template id="card-template">
       <li class="card">
+        <img class="card__image" src="" alt="placeholder" />
         <img
-          class="card__image"
-          src=""
-          alt="placeholder"
-        />
-        <img
-        class="card__delete-button"
-        src="<%=require('./images/Trash.svg')%>"
-        alt="delete button"
+          class="card__delete-button"
+          src="<%=require('./images/Trash.svg')%>"
+          alt="delete button"
         />
         <div class="card__description">
           <h2 class="card__title"></h2>
