Fixed code reviewers comments Sprint 8

--- a/src/index.html
+++ b/src/index.html
@@ -92,7 +92,7 @@
           <input
             class="popup__input popup__title"
             type="text"
-            name="add-modal-open-button"
+            name="about"
             id="description"
             placeholder="Description"
             maxlength="200"
