Testing pull request project 9

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
                 alt="Add Button"
               />
             </button>
-            <p class="profile__title">Explorer</p>
+            <p class="profile__title">Explorer A</p>
           </div>
           <button
             type="button"
