More design changes sprint 9

--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,7 @@
                   placeholder="description"
                   required
                   name="description"
-                  maxlength="1000"
+                  maxlength="200"
                   minlength="2" />
                 <div
                   class=".popup__input_type_error"
@@ -97,7 +97,7 @@
             <button type="submit" class="popup__form-button">Save</button>
           </form>
         </div>
-        <button type="button" class="popup__container"></button>
+        <button type="button" class="popup__form-button"></button>
       </div>
     </section>
     <section class="popup" id="card-popup">
