--- a/src/index.html
+++ b/src/index.html
@@ -97,7 +97,9 @@
             <button type="submit" class="popup__form-button">Save</button>
           </form>
         </div>
-        <button type="button" class="popup__form-button"></button>
+        <div class="popup__container-close-wrapper">
+          <button type="button" class="popup__container-close"></button>
+        </div>
       </div>
     </section>
     <section class="popup" id="card-popup">
@@ -149,7 +151,9 @@
             </button>
           </form>
         </div>
-        <button type="button" class="popup__container"></button>
+        <div class="popup__container-close-wrapper">
+          <button type="button" class="popup__container-close"></button>
+        </div>
       </div>
     </section>
 
@@ -183,7 +187,16 @@
             </button>
           </form>
         </div>
-        <button type="button" class="popup__container-close"></button>
+        <div class="popup__container-close-wrapper">
+          <button type="button" class="popup__container-close"></button>
+        </div>
+        <div class="popup__container-close-wrapper">
+          <button
+            type="button"
+            class="popup__container-close"
+            id="avatar-popup-close"
+          ></button>
+        </div>
       </div>
     </section>
 
@@ -193,6 +206,12 @@
         <div>
           <img class="popup__image" src="#" alt="" />
           <h2 class="popup__box-image-title"></h2>
+        </div>
+        <div class="popup__container-close-wrapper">
+          <button type="button" class="popup__container-close"></button>
+        </div>
+        <div class="popup__container-close-wrapper">
+          <button type="button" class="popup__container-close"></button>
         </div>
       </div>
     </section>
@@ -210,7 +229,9 @@
             </button>
           </form>
         </div>
-        <button type="button" class="popup__container"></button>
+        <div class="popup__container-close-wrapper">
+          <button type="button" class="popup__container-close"></button>
+        </div>
       </div>
     </section>
     <template id="card-template">
